examples/test/testpolicy1281.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1281
  namespace: namespace140
spec:
  podSelector:
    matchLabels:
      key2: value22
      key12: value29
      key3: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value9
          key1: value40
      podSelector:
        matchLabels:
          key18: value22
          key47: value2
